--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           <div class="skills-sample">
             <div class="skills__top">
               <h4 class="skills__name">JavaScript/JQuery</h4> 
-              <p class="present">35%</p>
+              <p class="present">55%</p>
             </div>
             
             <div class="top-box">
@@ -192,8 +192,8 @@
           </div>
           <div class="skills-sample">
             <div class="skills__top">
-              <h4 class="skills__name">Wordpress</h4>
-              <p class="present">60%</p>
+              <h4 class="skills__name">Vue.js</h4>
+              <p class="present">30%</p>
             </div>
             
             <div class="top-box">
