--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               <img src="./images/about-me/mail.svg" alt="" class="icon">
               <div class="box-text">
                 <p class="top-text">Email</p>
-              <p class="down-text">vlad.munin@yandex.ru</p>
+              <p class="down-text">vlad.mungin@yandex.ru</p>
               </div>
               
             </div>
